--- a/src/components/how-to-use/index.css
+++ b/src/components/how-to-use/index.css
@@ -10,6 +10,10 @@
     color: #010101;
 }
 
+.how-to-use .outer-li {
+    margin-bottom: 15px;
+}
+
 .how-to-use .top-space {
     margin-top: 45px;
 }
